...
        
        override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
            super.init(style: style, reuseIdentifier: reuseIdentifier)
            self.accessibilityIdentifier = "LineCell"
            self.selectionStyle = .none
                        
            lineNumber.accessibilityIdentifier = "LineLabel"
            lineNumber.backgroundColor = UIColor.lightGray
            contentView.addSubview(lineNumber)
            contentView.addSubview(textFieldController.view)
            
            setupContraints()
            
...
            self?.toggleCustomKeyobard()
        }
        let toggleKeyboard = UIBarButtonItem(title: toggleKeyboardTitle,
                                             image: nil,
                                             primaryAction: toggleKeyboardAction )
        
        let addBelowTitle = NSLocalizedString("Add Below", comment: "")
        let addBelowAction = UIAction(title: addBelowTitle) { [weak self] action in
            Task {
                await self?.addItemBelow()
            }
        }
        let addBelow = UIBarButtonItem(title: addBelowTitle,
                                       image: nil,
                                       primaryAction: addBelowAction )
        
        let addAboveTitle = NSLocalizedString("Add Above", comment: "")
        let addAboveAction = UIAction(title: addBelowTitle) { [weak self] action in
            
            if let tableView = self?.linesController.tableView, let indexPath = tableView.indexPathForSelectedRow {
                
                Task {
                    await self?.addItemAbove( in: tableView, atRow: indexPath )
...
