...
        self.view = textField
    }
    
    public override func viewDidLoad() {
        textField.delegate = self
        textField.pasteDelegate = self
        textField.accessibilityIdentifier = "LineText"
        textField.keyboardType = .asciiCapable
        textField.autocapitalizationType = .none
        textField.returnKeyType = .done
        
        textField.addTarget(self, action: #selector(self.editingChanged), for: .editingChanged)

...
